# torch-simple

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker-dev/: Dockerfile
tests/: test_functional.py  test_nn.py
torch_simple/: exceptions.py  functional.py  nn.py  typedefs.py  utils.py
