[tool.poetry]
name = "torch-simple"
version = "0.1.0"
description = "Simple things that should be implemented in torch, but are not (yet)"
authors = ["Marek Kadlcik <10684818+markcheeky@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "torch_simple"}]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.13.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
mypy = "^0.991"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
